--- a/.env
+++ b/.env
@@ -14,8 +14,8 @@ DATA_PATH_HOST=./data
 # MYSQL ##########################################
 # Mysql 服务映射宿主机端口号，可在宿主机127.0.0.1:3306访问
 MYSQL_PORT=3306
-MYSQL_USERNAME=root
-MYSQL_PASSWORD=123456
+#MYSQL_USERNAME=root
+#MYSQL_PASSWORD=123456
 MYSQL_ROOT_PASSWORD=123456
 
 
