--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,8 +45,8 @@ services:
       context: ./mysql
     environment:
       - TZ=${TZ}
-      - MYSQL_USER=${MYSQL_USERNAME}                  # 设置 Mysql 用户名称
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}              # 设置 Mysql 用户密码
+#      - MYSQL_USER=${MYSQL_USERNAME}                  # 设置 Mysql 用户名称
+#      - MYSQL_PASSWORD=${MYSQL_PASSWORD}              # 设置 Mysql 用户密码
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}    # 设置 Mysql root 用户密码
     volumes:
       - ${DATA_PATH_HOST}/mysql:/var/lib/mysql        # 引用 .env 配置中 DATA_PATH_HOST 变量，将宿主机上存放 Mysql 数据的目录挂载到容器中 /var/lib/mysql 目录
@@ -69,53 +69,53 @@ services:
       - backend
     restart: always
 
-  prometheus:
-    build:
-      context: ./prometheus
-    environment:
-      - TZ=${TZ}
-    volumes:
-      - ./prometheus/prometheus.yml:/opt/bitnami/prometheus/conf/prometheus.yml  # 将 prometheus 配置文件挂载到容器里
-    ports:
-      - "${PROMETHEUS_PORT}:9090"                     # 设置容器9090端口映射指定宿主机端口，用于宿主机访问可视化web
-    networks:
-      - backend
-    restart: always
+#  prometheus:
+#    build:
+#      context: ./prometheus
+#    environment:
+#      - TZ=${TZ}
+#    volumes:
+#      - ./prometheus/prometheus.yml:/opt/bitnami/prometheus/conf/prometheus.yml  # 将 prometheus 配置文件挂载到容器里
+#    ports:
+#      - "${PROMETHEUS_PORT}:9090"                     # 设置容器9090端口映射指定宿主机端口，用于宿主机访问可视化web
+#    networks:
+#      - backend
+#    restart: always
 
-  grafana:
-    build:
-      context: ./grafana
-    environment:
-      - TZ=${TZ}
-    ports:
-      - "${GRAFANA_PORT}:3000"                        # 设置容器3000端口映射指定宿主机端口，用于宿主机访问可视化web
-    networks:
-      - backend
-    restart: always
+#  grafana:
+#    build:
+#      context: ./grafana
+#    environment:
+#      - TZ=${TZ}
+#    ports:
+#      - "${GRAFANA_PORT}:3000"                        # 设置容器3000端口映射指定宿主机端口，用于宿主机访问可视化web
+#    networks:
+#      - backend
+#    restart: always
 
-  jaeger:
-    build:
-      context: ./jaeger
-    environment:
-      - TZ=${TZ}
-    ports:
-      - "${JAEGER_PORT}:16686"                        # 设置容器16686端口映射指定宿主机端口，用于宿主机访问可视化web
-    networks:
-      - backend
-    restart: always
+#  jaeger:
+#    build:
+#      context: ./jaeger
+#    environment:
+#      - TZ=${TZ}
+#    ports:
+#      - "${JAEGER_PORT}:16686"                        # 设置容器16686端口映射指定宿主机端口，用于宿主机访问可视化web
+#    networks:
+#      - backend
+#    restart: always
 
-  dtm:
-    build:
-      context: ./dtm
-    environment:
-      - STORE_DRIVER=${DTM_STORE_DRIVER}
-      - STORE_HOST=${DTM_STORE_HOST}
-      - STORE_USER=${DTM_STORE_USERNAME}
-      - STORE_PASSWORD=${DTM_STORE_PASSWORD}
-      - STORE_PORT=${DTM_STORE_PORT}
-    ports:
-      - "${DTM_PORT_36789}:36789"
-      - "${DTM_PORT_36790}:36790"
-    networks:
-      - backend
-    restart: always
+#  dtm:
+#    build:
+#      context: ./dtm
+#    environment:
+#      - STORE_DRIVER=${DTM_STORE_DRIVER}
+#      - STORE_HOST=${DTM_STORE_HOST}
+#      - STORE_USER=${DTM_STORE_USERNAME}
+#      - STORE_PASSWORD=${DTM_STORE_PASSWORD}
+#      - STORE_PORT=${DTM_STORE_PORT}
+#    ports:
+#      - "${DTM_PORT_36789}:36789"
+#      - "${DTM_PORT_36790}:36790"
+#    networks:
+#      - backend
+#    restart: always
