--- a/code/src/mall/service/user/api/etc/user.yaml
+++ b/code/src/mall/service/user/api/etc/user.yaml
@@ -15,7 +15,14 @@ CacheRedis:
     Type: node
 
 UserRpc:
+  App: userapi                          # App 标识
+  Token: 6jKNZbEpYGeUMAifz10gOnmoty3TV  # Token 值
   Etcd:
     Hosts:
       - etcd:2379
     Key: user.rpc
+
+Prometheus:
+  Host: 0.0.0.0
+  Port: 9080
+  Path: /metrics
