--- a/code/src/mall/service/user/rpc/etc/user.yaml
+++ b/code/src/mall/service/user/rpc/etc/user.yaml
@@ -14,3 +14,15 @@ CacheRedis:
   - Host: redis:6379
     Type: node
     Pass:
+Auth: true               # 是否开启 Auth 验证
+StrictControl: true      # 是否开启严格模式
+Redis: # 指定 Redis 服务
+  Key: rpc:auth:user     # 指定 Key 应为 hash 类型
+  Host: redis:6379
+  Type: node
+  Pass:
+
+Prometheus:
+  Host: 0.0.0.0
+  Port: 9090
+  Path: /metrics
